--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "atomizer"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["Nicole Mazzuca <npmazzuca@gmail.com>"]
 edition = "2018"
-description = "Squatting on a name for a symbol intern library"
+description = "StableSet library, for interned data"
 license = "Apache-2.0"
 
 [dependencies]
