--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.3"
 authors = ["Nicole Mazzuca <npmazzuca@gmail.com>"]
 edition = "2018"
 description = "StableSet library, for interned data"
+repository = "https://github.com/ubsan/atomizer"
 license = "Apache-2.0"
 
 [dependencies]
